--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
     </p>
     <a href="./go-lanjutan/pemrograman_be_lanjutan.html">Baca Artikel</a>
   </div>
+  <div class="container">
+    <h1>Pemrograman API Golang</h1>
+    <h2>Aditya Rizky Ramadhan</h2>
+    <p>Artikel ini membahas tentang konsep clean architecture, konsep REST API, Pengenalan Framework Golang, dan
+      implementasi REST API menggunakan Golang, Middleware, dan Autentikasi dan Authorisasi.
+    </p>
+    <a href="./go-api/index.html">Baca Artikel</a>
+  </div>
 </body>
 
 </html>
