feat: add deployment to server

--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
     </p>
     <a href="./go-api/index.html">Baca Artikel</a>
   </div>
+  <div class="container">
+    <h1>Deployment</h1>
+    <h2>Aditya Rizky Ramadhan</h2>
+    <p>Artikel ini membahas tentang cara melakukan deployment aplikasi golang ke server.
+    </p>
+    <a href="./deployment/deployment.html">Baca Artikel</a>
+  </div>
 </body>
 
 </html>
