--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       background-color: #fff;
       padding: 20px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      margin-bottom: 20px;
     }
 
     h1,
