--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
         "author": "Aditya Rizky Ramadhan",
         "description": "Artikel ini membahas tentang cara melakukan deployment aplikasi golang ke server.",
         "link": "./deployment/deployment.html"
+      },
+      {
+        "title": "Manajemen Database",
+        "author": "Aditya Rizky Ramadhan",
+        "description": "Artikel ini membahas tentang teori dan praktek manajemen database menggunakan Golang.",
+        "link": "./database/index.html"
       }
     ];
 
